examples/errors/print_empty.avm
push int8(39)
print
pop
print
exit